fix(web): fix layout shifting after scrollback appearance

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,8 +1,7 @@
 @tailwind base;
 
 body {
-  overflow-x: hidden;
-  margin-right: calc(-1 * (100vw - 100%));
+  overflow-y: scroll;
 }
 
 @tailwind components;
